[package]
name = "rdct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.79"
tokio = {version = "1", features = ["full"]}

[profile.release]
lto = true
panic = 'abort'
rpath = false
dynamic-linking = false
